--- a/AccountSystem/AccountSystemRepository/pom.xml
+++ b/AccountSystem/AccountSystemRepository/pom.xml
@@ -28,11 +28,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
             </dependency>
-        <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <scope>compile</scope>
-        </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-java8</artifactId>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.database.jdbc</groupId>
+                <artifactId>ojdbc8</artifactId>
+                <scope>compile</scope>
+            </dependency>
 
     </dependencies>
 </project>
