create flow implementation  still gives internal body error

--- a/AccountSystem/AccountSystemDomain/pom.xml
+++ b/AccountSystem/AccountSystemDomain/pom.xml
@@ -20,5 +20,13 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <artifactId>javax.persistence-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
