--- a/AccountSystem/AccountSystemLogic/pom.xml
+++ b/AccountSystem/AccountSystemLogic/pom.xml
@@ -27,6 +27,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+               <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
