--- a/AccountSystem/AccountSystemTranslator/pom.xml
+++ b/AccountSystem/AccountSystemTranslator/pom.xml
@@ -28,5 +28,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>za.ac.nwu.ac</groupId>
+            <artifactId>AccountSystemRepository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
