--- a/AccountSystem/AccountSystemDomain/pom.xml
+++ b/AccountSystem/AccountSystemDomain/pom.xml
@@ -16,6 +16,10 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <scope>provided</scope>
